--- a/Site de Noticias/html/contato.html
+++ b/Site de Noticias/html/contato.html
@@ -76,7 +76,7 @@
         <h6>Menu de Categorias</h6>
 
         <ul>
-          <li><a href="index.html"><span class="negrito">Principal</span></a></li>
+          <li><a href="index.php"><span class="negrito">Principal</span></a></li>
           <li><a href="politica.html"><span class="negrito">Política</span></a></li>
           <li><a href="educacao.html"><span class="negrito">Educação</span></a></li>
           <li><a href="saude.html"><span class="negrito">Saúde</span></a></li>
