--- a/Site de Noticias/html/educacao.html
+++ b/Site de Noticias/html/educacao.html
@@ -87,27 +87,27 @@
 
 
       
-      <aside>
-        <h6>Menu de Categorias</h6>
-
-        <ul>
-          <li><a href="index.html"><span class="negrito">Principal</span></a></li>
-          <li><a href="politica.html"><span class="negrito">Política</span></a></li>
-          <li><a href="educacao.html"><span class="negrito">Educação</span></a></li>
-          <li><a href="saude.html"><span class="negrito">Saúde</span></a></li>
-        </ul>
-        <form>
-          <input type="search" name="pesquisa" placeholder="Buscar Notícias">
-          <input type="submit" value="Buscar">
-        </form>
-      </aside>
+         <aside>
+          <h6>Menu de Categorias</h6>
+  
+          <ul>
+            <li><a href="index.php"><span class="negrito">Principal</span></a></li>
+            <li><a href="politica.html"><span class="negrito">Política</span></a></li>
+            <li><a href="educacao.html"><span class="negrito">Educação</span></a></li>
+            <li><a href="saude.html"><span class="negrito">Saúde</span></a></li>
+            <li><a href="addNoticia.php"><span class="negrito">Adicionar Notícia</span></a></li>
+          </ul>
+          <form method="POST" class="form-group col-md-4" action="busca.php">
+            <input type="text" name="busca" placeholder="Buscar Notícias">
+          </form>
+        </aside>
 
     </main>
 
     
 
     <footer>
-      <p>©Copyright 2021/05/20. ~ Thiago M. Costa / Rodrigo ~ 
+      <p>©Copyright 2021/05/20. ~ Thiago M. Costa ~ 
         <a href = "mailto: thiago.costa@aluno.ifsp.edu.br">Fale Conosco</a</p>
     </footer>
 
